# dotfiles

./: .alacritty.toml  .alacritty.yml  .bunfig.toml  .default-gems  .default-go-packages  .default-npm-packages  .default-python-packages  .dockerignore  .editorconfig  .gitconfig  .gitignore  .hyper.js  .npmrc  .p10k.zsh  .purepower  .rubocop.yml  .starship.toml  .tmux.conf  .vimrc  .watchmanconfig  .wezterm.lua  .zimrc  .zplugins  .zpreztorc  .zprofile  .zsh-plugins  .zsh_plugins.txt  .zshrc  Brewfile  Brewfile.lock.json  CHANGELOG.md  Dockerfile  GASTOWN.md  Justfile  README-container.md  README.md  Taskfile.md  Taskfile.yml  build-docker.sh  check-paths.zsh  (+33 more)
.claude/: .gitignore  CLAUDE.md  settings.json
.claude/agents/: ticket.md
.claude/skills/: .gitignore
.claude/skills/async-ticket/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/ticket/: SKILL.md
.claude/skills/zellij-here/: SKILL.md
.github/: CODEOWNERS
.github/workflows/: container.yml  devbox.yml  rust-tests.yml
.zsh.d/: .zsh.d  00-prelude.zsh  00-setup.zsh  01-brew.zsh  01-completions.zsh  01-mise.zsh  01-path.zsh  02-asdf.zsh  02-completions.zsh  02-path.zsh  03-alias.zsh  03-brew.zsh  04-fzf.zsh  04-sdks.zsh  04-zsh-autocomplete.zsh  05-antibody.zsh  05-antidote.zsh  05-zgenom.zsh  06-prompt.zsh  06-zsh-autocomplete.zsh  07-git.zsh  08-history.zsh  100-alias.zsh  101-completions.zsh  90-alias.zsh  90-sdks.zsh  98-completions.zsh  98-completions.zsh.disable  99-clobber.zsh  99-emacs.zsh  99-ls.zsh  android.zsh  aws.zsh  bat.zsh  bd.zsh  beet.zsh  brew.zsh  broot.zsh  bun.zsh  cf.zsh  (+42 more)
Formula/: fastmail-cli.rb  fastmail_cli.rb  rip-cd.rb
brewfiles.d/: ai.rb  audio-hw.rb  browsers.rb  core.rb  dev.rb  docker.rb  gaming.rb  infra.rb  media.rb  networking.rb  photo.rb  sharing.rb  social.rb  tailscale.rb  terminals.rb  virtual.rb  vpn.rb  work.rb
config/: fish-ai.ini.template  starship.toml
config.d/alacritty/: alacritty.toml
config.d/beets/: config.base.yaml  config.template.yaml
config.d/broot/: conf.hjson  verbs.hjson
config.d/browser-schedule/: config.toml
config.d/ghostty/: config
config.d/gitmux/: gitmux.yml
config.d/helix/: config.toml  languages.toml
config.d/k9s/: config.yaml
config.d/koan/: config.toml
config.d/launchd/: dev.dotfiles.update-ffmpeg.plist
config.d/lima/: isolated.yaml
config.d/mise/: config.toml
config.d/mise/conf.d/: .gitignore  01-settings.toml  02-aliases.toml  03-tools.toml  aliases.toml  env.toml  settings.toml  tools.toml
config.d/ni/: nirc
config.d/sheldon/: plugins.toml
config.d/starship/: config.toml
config.d/zed/: keymap.json  settings.json
config.d/zellij/: config.kdl
config.d/zellij/layouts/: default.kdl
config.d/zsh/conf.d/: 00-prelude.zsh  10-path.zsh  20-github.zsh  20-op.zsh  25-mise.zsh  45-hist-preview.zsh  android.zsh  aws.zsh  bat.zsh  broot.zsh  claude.zsh  devbox.zsh  dotfiles.zsh  editor.zsh  functions.zsh  fzf.zsh  git-worktree.zsh  git.zsh  interactive.zsh  k8s.zsh  libpq.zsh  lima.zsh  ni-learing.zsh  ni.zsh  npm-completion.zsh  npm.zsh  orbstack.zsh  pnpm.zsh  sfw.zsh  sheldon.zsh  task.zsh  terraform.zsh  utils.zsh  zellij-autoattach.zsh  zoxide.zsh  zz-starship.zsh  zzz-patina.zsh
config.d/zsh/functions/: echo-to-file  fm  fonts!  fr  gen-diff  git-conf-dir  install-terminfo  take  taketmp  upd
config/alacritty/: alacritty.toml
config/beets/: .gitignore  config.base.yaml  config.yaml
config/broot/: conf.hjson  verbs.hjson
config/browser-schedule/: .gitignore  config.json  config.toml
config/btop/: btop.conf
config/firefox/: policies.json
config/fish/: .gitignore  config.fish  fish_plugins  fish_variables
config/fish/completions/: browser-schedule-cli.fish  browser-schedule.fish  fastmail-cli.fish  fcloud.fish  houston.fish  rip-cd.fish
config/fish/conf.d/: 00-mise.fish  02-mise.fish  aws.fish  bangs.fish  bat.fish  brew.fish  bun.fish  ctrl-c.fish  dotfiles.fish  editor.fish  fzf.fish  gcp.fish  git.fish  interactive.fish  java.fish  k8s.fish  libpq.fish  local-bin.fish  lsd.fish  nano-web.fish  npm.fish  pnpm.fish  starship.fish  sudo-askpass.fish  take.fish  windsurf.fish  zoxide.fish
config/ghostty/: config
config/harper-ls/: dictionary.txt
config/helix/: config.toml  languages.toml
config/koan/: .gitignore  config.toml
config/launchd/: dev.dotfiles.update-ffmpeg.plist
config/mise/: config.toml
config/sheldon/: plugins.toml
config/starship/: config.toml
config/zed/: .gitignore  keymap.json  settings.json  settings_backup.json
config/zsh/: .gitignore  zimfw.zsh
containers/: Dockerfile  README.md  Taskfile.yml
containers/config/: .npmrc
containers/scripts/: entrypoint.sh
crates/: .gitignore  CANDIDATES.md  Cargo.toml  Justfile  README.md
crates/src/: audio.rs  banner.rs  cli.rs  config.rs  install.rs  lib.rs  logging.rs  parallel.rs  process.rs  regen_completions.rs  system.rs  update_ffmpeg.rs
docs/: cheatsheet.md  commands.md  fzf-tab-completions.md  new-tools.md  tmux-cheatsheet.md
fastmail-cli/: .gitignore  API.md  Taskfile.yml  go.mod  main.go  main_test.go
git/: .gitattributes
git.d/: .gitattributes  1password.conf  core.conf  delta.conf  diff.conf  git.conf  ignore  lfs.conf  merge.conf  sign.conf
hooks/: cmux-notify.sh  cmux-session.sh  cmux-title.sh  gastown-file-changed.sh  post-edit-format-reminder.sh
launchd/: com.mise.upgrade.plist
misc/: foo-snippets.md
misc/fb2k/: FileOps-Presets.txt  UI-Layout.txt  config.sqlite
nix/: darwin.nix  files.nix  git.nix  home.nix  packages.nix  programs.nix  ssh.nix  zsh.nix
packager.d/: cargo-config.toml  mise-secrets.tmpl
scripts/: git-conf-dir  git-trigger  imp  install-font-macos  parallel-dl-extract  prune-gen  sfw  unfuck-xcode  upd.exs  url2base64  vimv  wt-picker  wt-preview  wt-shell  zellij-urls
ssh/: basic.conf  harden.conf
ssh.d/: basic.conf  harden.conf
tooling-rust/: CANDIDATES.md  Cargo.toml  Justfile  README.md
tooling-rust/src/: audio.rs  cli.rs  completions.rs  install.rs  lib.rs  logging.rs  process.rs  setup.rs  system.rs
workspace/: .gitkeep
(+70 files in other folders)
