[package]
name = "dotfiles-tools"
version = "1.0.0"
edition = "2021"
authors = ["James Cleveland"]
license = "MIT"
resolver = "2"

# Multiple binaries in one package
[[bin]]
name = "kill-port"
path = "src/bin/kill-port.rs"

[[bin]]
name = "prune"
path = "src/bin/prune.rs"

[[bin]]
name = "url2base64"
path = "src/bin/url2base64.rs"

[[bin]]
name = "git-sync"
path = "src/bin/git-sync.rs"

[[bin]]
name = "git-squash"
path = "src/bin/git-squash.rs"

[[bin]]
name = "git-trigger"
path = "src/bin/git-trigger.rs"

[[bin]]
name = "to-audio"
path = "src/bin/to-audio.rs"

[[bin]]
name = "clean-exif"
path = "src/bin/clean-exif.rs"

[[bin]]
name = "clean-dls"
path = "src/bin/clean-dls.rs"

[[bin]]
name = "imp"
path = "src/bin/imp.rs"

[[bin]]
name = "install-font-macos"
path = "src/bin/install-font-macos.rs"

[[bin]]
name = "unfuck-xcode"
path = "src/bin/unfuck-xcode.rs"

[[bin]]
name = "upd"
path = "src/bin/upd.rs"

[[bin]]
name = "vimv"
path = "src/bin/vimv.rs"

[[bin]]
name = "embed-art"
path = "src/bin/embed-art.rs"

[[bin]]
name = "extract-exif-from-flac"
path = "src/bin/extract-exif-from-flac.rs"

[[bin]]
name = "gen-diff"
path = "src/bin/gen-diff.rs"

[[bin]]
name = "install-terminfo"
path = "src/bin/install-terminfo.rs"

[[bin]]
name = "prune-gen"
path = "src/bin/prune-gen.rs"

[[bin]]
name = "regen-zsh-completions"
path = "src/bin/regen-zsh-completions.rs"

[[bin]]
name = "echo-to-file"
path = "src/bin/echo-to-file.rs"

[[bin]]
name = "parallel-dl-extract"
path = "src/bin/parallel-dl-extract.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "cargo", "env"] }
clap_complete = "4"
dialoguer = "0.12"
indicatif = { version = "0.18", features = ["rayon"] }

# Async
reqwest = { version = "0.12", features = ["blocking", "stream"] }

# Parallelism
rayon = "1"

# Error handling
anyhow = "1"

# File/Path utilities
walkdir = "2"
tempfile = "3"
zip = "7"

# System info
netstat2 = "0.11"
nix = { version = "0.30", features = ["signal"] }

# Directories
dirs = "6"

# Git
git2 = "0.20"

# Encoding
base64 = "0.22"

# Logging
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Terminal colors
colored = "3"

# Unicode width calculation
unicode-width = "0.2"

# Image processing
img-parts = "0.4"

# CPU detection
num_cpus = "1"

# Command detection
which = "8"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"

[lib]
name = "dotfiles_tools"
path = "src/lib.rs"
