[package]
name = "dotfiles-tools"
version = "1.0.0"
edition = "2021"
authors = ["James Cleveland"]
license = "MIT"
resolver = "2"

[lib]
name = "dotfiles_tools"
path = "src/lib.rs"

# Multiple binaries in one package
[[bin]]
name = "kill-port"
path = "src/bin/kill-port.rs"

[[bin]]
name = "prune"
path = "src/bin/prune.rs"

[[bin]]
name = "git-sync"
path = "src/bin/git-sync.rs"

[[bin]]
name = "git-squash"
path = "src/bin/git-squash.rs"

[[bin]]
name = "to-audio"
path = "src/bin/to-audio.rs"

[[bin]]
name = "clean-exif"
path = "src/bin/clean-exif.rs"

[[bin]]
name = "clean-dls"
path = "src/bin/clean-dls.rs"

[[bin]]
name = "embed-art"
path = "src/bin/embed-art.rs"

[[bin]]
name = "extract-exif-from-flac"
path = "src/bin/extract-exif-from-flac.rs"

[[bin]]
name = "regen-zsh-completions"
path = "src/bin/regen-zsh-completions.rs"

[dependencies]
# Error handling
anyhow = "1"
# CLI
clap = { version = "4", features = ["cargo", "derive", "env"] }
clap_complete = "4"
# Terminal colors
colored = "3"
dialoguer = "0.12"
# Directories
dirs = "6"
# Git
git2 = { version = "0.20", default-features = false }
# Image processing
img-parts = "0.4"
indicatif = { version = "0.18", features = ["rayon"] }
# System info
netstat2 = "0.11"
nix = { version = "0.31", features = ["signal", "user"] }
# Parallelism
rayon = "1"
tempfile = "3"
# File/Path utilities
walkdir = "2"
# Serialization
serde = { version = "1", features = ["derive"] }
toml = "0.8"
# Command detection
which = "8"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
